--- a/angular.json
+++ b/angular.json
@@ -101,8 +101,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           }
         },
         "lint": {
@@ -133,5 +132,8 @@
       }
     }
   },
-  "defaultProject": "dev-websalepage"
+  "defaultProject": "dev-websalepage",
+  "cli": {
+    "analytics": "289f7de1-4f0d-4b64-8aae-ed79dde430b8"
+  }
 }
